# ecg

./: .gitignore  Makefile  README.md  pyproject.toml
data/: download_data.py
ecg/: __init__.py  dataset.py  loss.py  model.py  plotting.py  train.py
notebooks/: kaggle.ipynb
