[tool.poetry]
name = "ecg"
version = "0.1.0"
description = "ECG modelling"
authors = ["Robert Edwards"]
license = "LICENSE.md"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
polars = "^1.17.1"
altair = "^5.5.0"
scikit-learn = "^1.6.0"
torchvision = "^0.20.1"
torchmetrics = "^1.6.0"
kagglehub = "^0.3.6"
pyarrow = "^18.1.0"
pandas = "^2.2.3"
numpy = "^2.2.1"
tqdm = "^4.67.1"
torcheval = "^0.0.7"
mlflow = "^2.19.0"
vl-convert-python = "^1.7.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"
mypy = "^1.14.0"
pytest = "^8.3.4"
jupyterlab = "^4.3.4"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

######################
# ruff
######################
[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"
include = [
	"pyproject.toml",
	"ecg/**/*.py",
	"data/**/*.py",
	"tests/**/*.py",
	"notebooks/**/*.py",
]
extend-include = ["*.ipynb"]
# Exclude a variety of commonly ignored directories.
exclude = [
	".bzr",
	".direnv",
	".eggs",
	".git",
	".git-rewrite",
	".hg",
	".ipynb_checkpoints",
	".mypy_cache",
	".nox",
	".pants.d",
	".pyenv",
	".pytest_cache",
	".pytype",
	".ruff_cache",
	".svn",
	".tox",
	".venv",
	".vscode",
	"__pypackages__",
	"_build",
	"buck-out",
	"build",
	"dist",
	"node_modules",
	"site-packages",
	"venv",
]

[tool.ruff.format]
# Black compatible settings
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = 60

[tool.ruff.lint]
select = [
	"E",   # pycodestyle
	"F",   # pyflakes
	"UP",  # pyupgrade
	"B",   # flake8-bugbear
	"SIM", # flake8-simplify
	"I",   # isort
	"RUF", # ruff-specific-rules
	"PL",  # pylint rules
]
ignore = [
	"D203", # one-blank-line-before-class
	"D213", # multi-line-summary-second-line
	"E501", # line-too-long
]
extend-select = [
	"UP", # pyupgrade
	"D",  # pydocstyle
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
"ecg/train.py" = [
	"B007", # loop-control-variable
]
"tests/**/*.py" = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pylint]
max-args = 8

######################
# mypy
######################
[tool.mypy]
exclude = ["^notebooks/", "*_cache"]
disable_error_code = ["name-defined"]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
implicit_reexport = true
pretty = true
show_column_numbers = true
show_error_context = true
warn_unreachable = true

######################
# pytest
######################
[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "WARNING"
markers = []
